savvy-macro/src/snapshots/savvy_macro__tests__assert_snapshot_inner-3.snap
---
source: savvy-macro/src/lib.rs
expression: lines
---
- unsafe fn savvy_foo_inner(
- "    x: savvy::ffi::SEXP,"
- "    y: savvy::ffi::SEXP,"
- ") -> savvy::Result<savvy::Sexp> {"
- "    let orig_hook = std::panic::take_hook();"
- "    std::panic::set_hook(Box::new(savvy::panic_hook::panic_hook));"
- "    let result = std::panic::catch_unwind(|| {"
- "        let x = <RealSexp>::try_from(savvy::Sexp(x))?;"
- "        let y = <savvy::IntegerSexp>::try_from(savvy::Sexp(y))?;"
- "        foo(x, y)"
- "    });"
- "    std::panic::set_hook(orig_hook);"
- "    match result {"
- "        Ok(orig_result) => orig_result,"
- "        Err(_) => Err(\"panic happened\".into()),"
- "    }"
- "}"
